--- a/lab4/index.html
+++ b/lab4/index.html
@@ -20,7 +20,7 @@
                             <div>
                                 <span>
                                     <a href="#">
-                                        <img src="/lab4/css/zh-inst-tt.jpg" width="720" height="360" alt="Заставка до матеріалу" class="img-responsive">
+                                        <img src="lplitart.jpg" width="720" height="360" alt="Заставка до матеріалу" class="img-responsive">
 
                                         <div class="shadow_featured"></div>
                                         <h2><span>Інститути – досягнення, плани, мотивація: тематичний номер журналу «Львівська політехніка»</span></h2>
@@ -32,7 +32,7 @@
                             <div>
                                 <span>
                                     <a href="#">
-                                        <img src="/lab4/css/zobrazhennyaviber2024-07-1515-03-24-090.jpg" class="img-responsive">
+                                        <img src="zobrazhennyaviber2024-07-1515-03-24-090.jpg" class="img-responsive">
 
                                         <div class="shadow_featured"></div>
                                         <h2><span>Звіт в.о. ректора Львівської політехніки Юрія Бобала на Конференції трудового колективу 30 січня 2025 року</span></h2>
@@ -50,7 +50,7 @@
                             <div>
                                 <span>
                                     <a href="#">
-                                        <img src="/lab4/css/zobrazhennyaviber2024-07-1515-03-24-090.jpg" width="720" height="360" alt="Політехніка екскурсійна" class="img-responsive">
+                                        <img src="zh-inst-tt.jpg" width="720" height="360" alt="Політехніка екскурсійна" class="img-responsive">
 
                                         <div class="shadow_featured"></div>
                                         <h2><span>Політехніка екскурсійна</span></h2>
@@ -62,7 +62,7 @@
                             <div>
                                 <span>
                                     <a href="#">
-                                        <img src="/lab4/css/lplitart.jpg" width="720" height="360" alt="Фронтон головного корпусу Львівської політехніки" class="img-responsive">
+                                        <img src="zvit-rektora-2024-tt.jpg" width="720" height="360" alt="Фронтон головного корпусу Львівської політехніки" class="img-responsive">
 
                                         <div class="shadow_featured"></div>
                                         <h2><span>Львівська політехніка у рейтингах закладів вищої освіти</span></h2>
