--- a/lab1/index.html
+++ b/lab1/index.html
@@ -19,7 +19,7 @@
 <li><a href="lab3/index.html">Lab3 - CSS та Flexbox</a></li>
 <li><a href="/lab4/index.html">Лабораторна 4</a></li>
 <li><a href="/lab5/index.html">Лабораторна 5</a></li>
-<li><a href="/lab6/index.html">Лабораторна 6 джаваскрипт</a></li>
+<li><a href="/lab6/index.html">Лабораторна 6 джаваскрипти</a></li>
 
 </li>
 
