--- a/lab9/index.html
+++ b/lab9/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="/lab9/main.js"></script>
+  
+<script src="js/main.js"></script>
+
+
   <title>Document</title>
 
 </head>
